--- a/Bert_Model.ipynb
+++ b/Bert_Model.ipynb
@@ -442,8 +442,8 @@
         "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
         "\n",
         "# Load IMDB dataset\n",
-        "imdb_train_df = pd.read_csv('train.csv')  # Replace 'imdb_train.csv' with the actual path to your IMDB training data\n",
-        "imdb_test_df = pd.read_csv('test.csv')    # Replace 'imdb_test.csv' with the actual path to your IMDB testing data\n",
+        "imdb_train_df = pd.read_csv('train.csv')  \n",
+        "imdb_test_df = pd.read_csv('test.csv')    \n",
         "\n",
         "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased', do_lower_case=True)\n",
         "\n",
